Update: getUsers perPage and testing
